test: fixed failing tests